--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "limits": "cpp",
         "algorithm": "cpp",
         "chrono": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "__split_buffer": "cpp",
+        "deque": "cpp"
     }
 }
